--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,9 +1,10 @@
 <%- include('partials/header'); -%>
 
 
-<h1>Compose</h1>
-<input type="text" name="">
-<button type="submit" name="button">Publish</button>
+    <h1>Compose</h1>
+    <form action="/" method="post">
+        <input type="text" name="value" placeholder="Type something">
+        <button type="submit" name="button">Publish</button>
+    </form>
 
-
-<%- include('partials/footer'); -%>
+    <%- include('partials/footer'); -%>
