--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,11 +1,5 @@
 <%- include('partials/header'); -%>
 
-
-    <!-- <h1>Compose</h1>
-    <form action="/compose" method="post">
-        <input type="text" name="value" placeholder="Type something">
-        <button type="submit" name="button">Publish</button>
-    </form> -->
     <h1>Compose</h1>
 
     <div class="container">
@@ -13,7 +7,7 @@
 
             <div class="form-group">
                 <label for="title">Title</label>
-                <input class="form-control" type="text" name="value" placeholder="Type something">
+                <input class="form-control" type="text" name="postTitle" placeholder="Type something">
             </div>
 
             <div class="form-group">
