--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,8 +7,9 @@
 
     <!-- <% console.log(posts); %> -->
 
-    <% for (let i=0; i < posts.length; i++) { %>
-        <% console.log(posts[i].title); %>
-            <% }; %>
+
+    <% posts.forEach(function(post){ %>
+        <% console.log(post.title); %>
+            <% }); %>
 
                 <%- include('partials/footer'); -%>
