--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,15 +1,15 @@
 <%- include('partials/header'); -%>
 
-    <h1>Home</h1>
-    <p>
-        <%= homeStartingContent %>
-    </p>
-
-    <!-- <% console.log(posts); %> -->
+<h1>Home</h1>
+<p><%= homeStartingContent %></p>
 
 
-    <% posts.forEach(function(post){ %>
-        <% console.log(post.title); %>
-            <% }); %>
+<% posts.forEach(function(post){ %>
+    
+<h1><%= post.title %></h1>
+<p><%= post.content %></p>
 
-                <%- include('partials/footer'); -%>
+<% }); %> 
+
+
+<%- include('partials/footer'); -%>
