--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
 <% posts.forEach(function(post){ %>
     
 <h1><%= post.title %></h1>
-<p><%= post.content %></p>
+<p><%= post.content.substring(0, 100) + " ..." %></p>
 
 <% }); %> 
 
