Add comments to app.js and home.ejs

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,11 +5,13 @@
         <%= homeStartingContent %>
     </p>
 
-    <!-- <% console.log(posts); %> -->
-
-
+ 
     <% posts.forEach(function(post){ %>
-        <% console.log(post.title); %>
+       
+        <h1> <%= post.title %> </h1>
+        <p>  <%= post.content %> </p>
+
             <% }); %>
 
                 <%- include('partials/footer'); -%>
+                <!--Code prep  for blog update with databases  -->
